Center text vertically in header with flexbox alignment

--- a/templates/index.html
+++ b/templates/index.html
@@ -152,6 +152,9 @@
                line-height: 1 !important;
                padding: 0.05rem 0 !important;
                margin: 0 !important;
+               display: flex !important;
+               align-items: center !important;
+               height: 2rem !important;
            }
           
           .navbar-brand .fas {
@@ -183,6 +186,9 @@
                line-height: 1 !important;
                padding: 0.05rem 0 !important;
                margin: 0 !important;
+               display: flex !important;
+               align-items: center !important;
+               height: 2rem !important;
            }
           
                      .navbar-text .fas {
@@ -212,6 +218,7 @@
                height: 2rem !important;
                display: flex !important;
                align-items: center !important;
+               justify-content: center !important;
            }
           
           @keyframes pulse {
